# selfhosted-cluster

./: .editorconfig  .envrc  .gitattributes  .gitconfig  .gitignore  .mcp.json  .pre-commit-config.yaml  .yamllint.yaml  CLAUDE.md  README.md  README.mdx  VENV.md  c_discord_bot_token_configuration.resource-type.yaml  cilium.yaml  dev.sh  pyproject.toml  requirements.txt  setup-venv.sh
.claude/: mcp.json  plugins.json  settings.json
.cursor/: mcp.json
.devcontainer/: .gitignore  CLAUDE.md  Dockerfile  README.md  cli-usage.md  devcontainer.json  gitconfig.template  login-setup.sh  post-create.sh  setup-claude-plugins.sh  setup-claude-secrets.sh
.github/: WORKFLOWS.md  labeler.yml  renovate.json
.serena/: config.json  project.yml
ansible/: .ansible-lint  .ansible_vault_password  .envrc  .gitignore  CLAUDE.md  ansible.cfg  bootstrap-nodes-playbook.yml  flash-nodes-playbook.yml  k3s-playbook.yml  reboot-nodes-playbook.yml  requirements-ansible.yml  requirements.yml  router-hosts-playbook.yml  teleport-agents-playbook.yml
argocd/: CLAUDE.md
docs/: README.md  UPGRADE_PLAN_2025.md  VAULT-MIGRATION-README.md  WINDMILL_STAGING_PROD_MIGRATION.md  ansible-vault-cleanup.md  cloudflare.md  github-token-setup.md  hcp-terraform.md  kubernetes-access.md  longhorn-storage-ha-migration.md  mcp-servers.md  migrate-to-grafana-alerting.md  observability-gpl-stack.md  vault-migration.md  vault.md  windmill-discord-bot-setup.md  windmill-discord-setup.md  windmill-migration.md  windmill-s3-setup.md  windmill-testing.md  windmill.md
fluxcd/: .sops.yaml
scripts/: README.md  (+11 more)
(+873 files in other folders)
