[project]
name = "selfhosted-cluster"
version = "0.1.0"
description = "Self-hosted cluster management"
license = "MIT"
requires-python = ">=3.14,<3.15"
dependencies = [
  "ansible-core>=2.19.0,<3.0.0",
  "jmespath",
  "netaddr",
  "dnspython",
  "requests",
  "PyYAML",
  "Jinja2",
  "hvac>=2.3.0",
  "kubernetes>=31.0.0",
  "paramiko>=3.5.0",
  "cryptography>=44.0.0",
  "yamllint>=1.35.0"
]

[project.optional-dependencies]
dev = [
  "icecream",
  "ruff",
  "ansible-lint>=24.10.0",
  "ansible-dev-tools>=25.12.0",
]

[tool.ruff]
line-length = 200
target-version = "py313"

exclude = [
    ".venv",
    "vendor",
    "__pycache__",
]

[tool.ruff.lint]
fixable = ["ALL"]
select = ["ALL"]
ignore = [
    "E501",   # line too long (handled by line-length setting)
]

[tool.ruff.lint.isort]
known-first-party = ["scripts"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv]
# Disable windows
environments = ["platform_system != 'Windows'"]
